--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
 
                     <div id="jordanOpciones" class="jordanOpciones">
                         <span class="jordanTextTitle">Ayuda a jordan a tomar una decisión: </span>
+                        <span class="jordanTextTitle" id="jordanTextTitle2">Para avanzar debes elegir una opción </span>
                         <div class="jordanRow">
                             <div id="jordanButtonRed" class="jordanCol">
                                 <img src="img/jordan/esc_6_fondo.jpg">
@@ -367,8 +368,10 @@
                                 </div>
                             </div>
                         </div>
-                        <span class="jordanTextTitle">Para avanzar debes elegir una opción </span>
+                        
                     </div>
+
+                    <div id="overlayDark" class="overlayDark"></div>
                     <div class="btn_interact primario"> 
                         <div class="interior">
                             <span>clic</span>
